# zerosdr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  app-builder.json
.github/workflows/: build.yml
applications/: zerosdr.desktop
debian/: changelog  control  rules
include/: audio_demodulator.h  audio_output.h  fft_processor.h  font.h  framebuffer.h  input_handler.h  sdr_controller.h  ui_renderer.h  version.h
share/applications/: zerosdr.desktop
src/: audio_demodulator.cpp  audio_output.cpp  fft_processor.cpp  font.cpp  framebuffer.cpp  input_handler.cpp  main.cpp  sdr_controller.cpp  ui_renderer.cpp
